--- a/index.html
+++ b/index.html
@@ -121,8 +121,14 @@
                   data-aos="fade-up"
                   data-aos-delay="300"
                 >
-                  <a href="#resume" class="btn btn-primary">View My Resume</a>
-                  <a href="#contact" class="btn btn-outline">Contact Me</a>
+                  <a
+                    href="assets/img/cv-nadira.docx.pdf"
+                    class="btn btn-primary"
+                    >View My Resume</a
+                  >
+                  <a href="https://wa.me/6281256557948" class="btn btn-outline"
+                    >Contact Me</a
+                  >
                 </div>
 
                 <div
