fix resume to experince

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="#exp">Experience</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -124,8 +124,8 @@
                   <a
                     href="assets/img/cv-nadira.docx.pdf"
                     class="btn btn-primary"
-                    >View My Resume</a
-                  >
+                    >Download CV</a>
+                  </a>
                   <a href="https://wa.me/6281256557948" class="btn btn-outline"
                     >Contact Me</a
                   >
@@ -197,7 +197,7 @@
               <div class="profile-image-wrapper">
                 <div class="profile-image">
                   <img
-                    src="assets/img/profile/nadiraprofile.jpg"
+                    src="assets/img/profile/nadiraprofile2.jpg"
                     alt="Profile"
                     class="img-fluid"
                   />
@@ -211,8 +211,7 @@
                   <h2>Hi, I'm Nadira Hikmah Fatheena</h2>
                   <p>
                     I am currently pursuing a major in Computer Science at
-                    Telkom University Purwokerto with a cumulative GPA of
-                    3.75/4.0. I have a strong interest in Front-end development
+                    Telkom University Purwokerto. I have a strong interest in Front-end development
                     and enjoy bridging the gap between academic learning and
                     industry needs through my role as a Google Student
                     Ambassador.
@@ -260,7 +259,7 @@
                     <span class="text">Based in Purwokerto, Indonesia</span>
                   </div>
                   <div class="action-buttons">
-                    <a href="#resume" class="btn btn-primary">See Experience</a>
+                    <a href="#exp" class="btn btn-primary">See Experience</a>
                   </div>
                 </div>
               </div>
@@ -399,9 +398,9 @@
           </div>
         </div>
       </section>
-      <section id="resume" class="resume section">
+      <section id="experience" class="experience section">
         <div class="container section-title">
-          <h2>Resume</h2>
+          <h2>Experience</h2>
           <p>
             A summary of my professional experience, community involvement, and
             academic background.
